pipeline-manager: strongly typed connector transport
Connector transports are now defined in a enumeration within the
pipeline-types crate rather than using a static mapping in the adapters
crate. The API now deserializes directly to the connector transport
variant rather than it only being deserialized at pipeline deployment.
The benefit of this is improved documentation, and earlier validation of
connector transport configuration structure. The change requires the
name to be suffixed with either "_input" or "_output" to differentiate
between input and output transport configurations. A SQL migration is
added to change the names inside the database. The enumeration includes
two types (http_input and http_output) that should not be instantiated
via the API directly via a connector, which is enforced via a check in
the pipeline-manager.

The name change has been updated in the web-console, and a fix has been
added to have the topics field of the Kafka input connector be an array
of strings.
